Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -567,22 +567,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12261"
+       "6049650.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['piece_count'].count()"
+    "df['piece_count'].sum()"
    ]
   },
   {
