--- a/index.ipynb
+++ b/index.ipynb
@@ -632,11 +632,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Average', 'Easy', 'Challenging', 'Very Easy', nan,\n",
+       "       'Very Challenging'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df['review_difficulty'].unique()"
    ]
   },
   {
